log
Thu May 12 11:25:22 HSP 2022: 
 tests:  0|5
total_score: 0/70
eef4bee
Thu May 12 11:27:28 HSP 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
1c4e72d
Sat May 14 16:27:22 HSP 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'recorrer_ileras':
sudoku.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d39d1b6
